--- a/src/language/languages.json
+++ b/src/language/languages.json
@@ -156,7 +156,7 @@
     "perl": {
         "name": "Perl",
         "mode": "perl",
-        "fileExtensions": ["pl", "pm"]
+        "fileExtensions": ["pl", "pm", "cgi"]
     },
 
     "ruby": {
