update perl bindings

--- a/src/language/languages.json
+++ b/src/language/languages.json
@@ -155,7 +155,7 @@
     "perl": {
         "name": "Perl",
         "mode": "perl",
-        "fileExtensions": ["pl", "pm", "cgi"],
+        "fileExtensions": ["cgi", "pl", "pm", "t", "ep"],
         "lineComment": ["#"]
     },
 
